--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,15 +5,23 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
 
 add_executable(state_saver src/main.cpp
     src/SensorDataConfig.hpp
 	src/SensorDataConfig.cpp
     )
-ament_target_dependencies(state_saver rclcpp std_msgs sensor_msgs)
+ament_target_dependencies(state_saver rclcpp std_msgs sensor_msgs  nav_msgs
+  geometry_msgs
+  tf2
+  tf2_geometry_msgs)
 
 install(TARGETS state_saver DESTINATION lib/${PROJECT_NAME})
 
 ament_package()
+ament_export_dependencies(rclcpp nav_msgs geometry_msgs tf2 tf2_geometry_msgs)
 
 
