Proof of testcases and it works. Changed ros2 testcases.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,12 @@
 cmake_minimum_required(VERSION 3.5)
 project(state_saver)
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(EXPORT_COMPILE_COMMANDS ON)
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(ament_cmake_gtest REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
@@ -14,7 +18,18 @@ add_executable(state_saver src/main.cpp
     src/SensorDataConfig.hpp
 	src/SensorDataConfig.cpp
     )
+
+ament_add_gtest(state_saver_test
+  test/test_state_saver.cpp
+  src/SensorDataConfig.hpp
+  src/SensorDataConfig.cpp
+)
+
 ament_target_dependencies(state_saver rclcpp std_msgs sensor_msgs  nav_msgs
+  geometry_msgs
+  tf2
+  tf2_geometry_msgs)
+  ament_target_dependencies(state_saver_test rclcpp std_msgs sensor_msgs  nav_msgs
   geometry_msgs
   tf2
   tf2_geometry_msgs)
